@@ -1,6 +1,7 @@
 NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
 
-10032193 -> jonnyboy -> hide getid3.php line 1641 errors
+10032193 -> jonnyboy -> fixed bug in releases.php not catching duplicates properly
+						hide getid3.php line 1641 errors
                         fixed a couple bugs in python scripts
 09302103 -> jonnyboy -> fixed binaries_safe_threaded.py
                         fixed many bugs
